--- a/src/trunk/GRAPHO_SYSTEMS/src/views/ods/Falla_Refacciones.mxml
+++ b/src/trunk/GRAPHO_SYSTEMS/src/views/ods/Falla_Refacciones.mxml
@@ -3,81 +3,9 @@
 			   xmlns:s="library://ns.adobe.com/flex/spark"
 			   xmlns:mx="library://ns.adobe.com/flex/mx"
 			   xmlns:components="views.components.*"
-			   width="584" height="510" horizontalCenter="0"
-			   title="Equipos">
-
-	<s:TextInput x="118" y="10" id="_nombreEquipo" change="dataChange();" width="151" tabIndex="1"/>
-	<s:TextInput x="399" y="9" id="_modelo" change="dataChange();" width="175" tabIndex="2"/>
-	<s:TextInput x="118" y="40" id="_serie" change="dataChange();" width="150" tabIndex="3"/>
-	<s:TextInput x="399" y="39" id="_anioFabricacion" change="dataChange();" width="175" maxChars="4" restrict="0-9"  tabIndex="4"/>
-
-	<s:ComboBox 	x="118" id="_idMarca" 	labelField="_nombreMarca" dataProvider="{SystemGlobals.MARCAS}" change="dataChange();"	width="149" y="70" tabIndex="5"/>
-	<s:ComboBox 	x="399" id="_idTipoEquipo" labelField="_nombreTipo" dataProvider="{SystemGlobals.TIPOS_EQUIPOS}" change="dataChange();"	width="137" y="69" tabIndex="6"/>
-	<s:ComboBox 	x="120" id="_searchType" 	dataProvider="{_searchTypes}" 	width="148" y="152" tabIndex="7"/>
-	<s:TextInput 	x="276" id="_searchField" 	change="search();" 		width="298" enabled="{!_newData}" y="152" tabIndex="8"/>
+			   width="626" height="272" horizontalCenter="0"
+			   title="Refacciones">
 	
-	
-	<s:Label y="14" right="193" width="101" text="Modelo:" textAlign="right"/>
-	<s:Label y="47" right="473" width="101" text="No. Serie:" textAlign="right"/>
-
-
-	<s:DataGrid id="_dataList" left="10" right="10" bottom="50" height="233"
-				dataProvider="{_DataResult}"
-				enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;!_updateData}"
-				selectionChange="onDataSelect();" selectionMode="singleRow">
-		<s:columns>	
-			<s:ArrayList>
-				<s:GridColumn headerText="Nombre" dataField="_nombreEquipo" ></s:GridColumn>		
-				<s:GridColumn headerText="Modelo" dataField="_modelo"></s:GridColumn>
-				<s:GridColumn headerText="N.Serie" dataField="_serie" ></s:GridColumn>		
-				<s:GridColumn headerText="Año" dataField="_anioFabricacion"></s:GridColumn>
-			</s:ArrayList>
-		</s:columns>
-	</s:DataGrid>
-	<s:Button visible="{!_newData&amp;&amp;!_updateData}" left="10" bottom="10" width="80"
-			  height="30" label="{SystemGlobals.LABELS[5][SystemGlobals.LANGUAGE]}"
-			  click="newData();" enabled="{_dataReady}"/>
-	<s:Button visible="{_newData||_updateData}" left="98" bottom="10" width="80" height="30"
-			  label="{SystemGlobals.LABELS[7][SystemGlobals.LANGUAGE]}" click="cancel();"
-			  enabled="{_dataReady}"/>
-	<s:Button visible="{_newData}" left="10" bottom="10" width="80" height="30"
-			  label="{SystemGlobals.LABELS[10][SystemGlobals.LANGUAGE]}" click="createData();"
-			  enabled="{_dataReady}"/>
-	<s:Button visible="{!_newData&amp;&amp;!_updateData}" left="98" bottom="10" width="80"
-			  height="30" label="{SystemGlobals.LABELS[6][SystemGlobals.LANGUAGE]}"
-			  click="deleteDataAlert();" enabled="{_dataReady&amp;&amp;!_newData}"/>
-	<s:Button visible="{_updateData&amp;&amp;!_newData}" left="10" bottom="10" width="80" height="30"
-			  label="{SystemGlobals.LABELS[8][SystemGlobals.LANGUAGE]}" click="updateData();"
-			  enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;_updateData}"/>
-	<s:Button right="10" bottom="10" width="145" height="30"
-			  label="{SystemGlobals.LABELS[9][SystemGlobals.LANGUAGE]}" click="closeWindow();"
-			  enabled="{!_newData}"/>
-	<s:Button x="275" y="69" width="30" height="23"
-			  click="openPopUp(&quot;equipos.Marcas&quot;,true);"
-			  icon="@Embed(source='../../assets/Icons/Buttons/Edit.png')"
-			  skinClass="spark.skins.spark.ButtonSkin"/>
-	<s:Button x="544" y="68" width="30" height="23"
-			  click="openPopUp(&quot;equipos.Tipos_Equipos&quot;,true);"
-			  icon="@Embed(source='../../assets/Icons/Buttons/Edit.png')"
-			  skinClass="spark.skins.spark.ButtonSkin"/>
-	
-	
-	<s:Label y="76" right="191" width="101" text="Tipo Equipo:" textAlign="right"/>
-	
-	<s:Label y="158" right="468" width="105"
-			 text="{SystemGlobals.LABELS[4][SystemGlobals.LANGUAGE]} :" textAlign="right"/>
-	<s:Label x="10" y="12" width="100" height="16" fontStyle="normal"
-			 text="Descripción:" textAlign="right"
-			 verticalAlign="middle"/>
-	<s:Label y="47" right="192" width="101" text="Año:" textAlign="right"/>
-	<s:Label y="76" right="473" width="101" text="Marca:" textAlign="right"/>
-	<s:Button x="400" y="102" label="Refacciones" width="174"
-			  click="openPopUp(&quot;equipos.Refacciones&quot;,true);"
-			  enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;!_updateData}" />
-	
-	
-	
-
 	
 	<fx:Script>
 		<![CDATA[
@@ -120,21 +48,14 @@
 			
 			private var _selectedId:Number 		= 0;
 			private var _selectedName:String 	= "";
-			private var _serviceName  			= "Equipos";
-			private var _mainId  				= "_idEquipo";
-			private var _mainFocusField:String 	= "_nombreEquipo";
+			private var _serviceName  			= "Refacciones";
+			private var _mainId  				= "_idRefaccion";
+			private var _mainFocusField:String 	= "_nombre";
+			[Bindable]	private var _refacciones:ArrayCollection = new ArrayCollection();
+			[Bindable]	private var _refaccionesAsignadas:ArrayCollection = new ArrayCollection();
 			
-			
-			[Bindable]	private var _idCliente:Number 		= -1;
-			[Bindable]	private var _nombreEmpresa:String 	= "";
-			private var _dataObject:Object  	= new Object();
-			
-			public function set Cliente(value:Object):void	{
-				_nombreEmpresa = value._nombreEmpresa;	
-				_dataObject = value;	
-				_idCliente = 	value._idCliente;
-			}
-			
+			private var _idEquipo = -1;
+			private var _idDiagnostico = -1;
 			//-----------Local Vars -----------
 			
 			//---------------------------- Context ---------------------------------------------            
@@ -151,6 +72,14 @@
 				_workManager = value;
 			}
 			
+			public function set idEquipo(value:Object):void{
+				_idEquipo = value;
+			}
+			
+			public function set idDiagnostico(value:Object):void{
+				_idDiagnostico = value;
+			}
+			
 			public function set webApplication(value:WebApplication):void{
 				_webApplication = value;
 				initView();
@@ -163,10 +92,8 @@
 			// ------------------- View Extra Data -------------------------------
 			
 			private function get viewContext():Object{
-				if(_dataIndex<0) _dataIndex = 0;
 				return {webApplication: _webApplication,
-					workManager: this, idClient:Number, 
-					idEquipo:_DataResult[_dataIndex]._idEquipo
+					workManager: this
 				}					
 			}
 			
@@ -174,8 +101,7 @@
 				Valid.changeLanguage(Languages.SPANISH);
 				
 				//----------- Validaciones ---------------------------
-				Valid.addStringVal(_nombreEquipo,1,100,"Descripcion del Equipo");
-
+				//Valid.addStringVal(_nombre,1,100,"Nombre");
 				
 				//----------- Validaciones ---------------------------
 				
@@ -188,12 +114,9 @@
 				if(_newData||_updateData) Valid.validateAll();//Valid.validateOne(e.currentTarget.name);
 			}
 			
-			private function extraCreateData(params:Object):Object{	
-				if(_idCliente!=-1){
-					params["_idCliente"] = _idCliente;
-				}
-				
+			private function extraCreateData(params:Object):Object{				
 				//params["_newsImage"] = _image;
+				params["_idEquipo"] = _idEquipo;
 				return params;
 			}
 			
@@ -202,7 +125,7 @@
 			}
 			
 			private function extraUpdateData(params:Object):Object{	
-				//params['_color'] = areaColor.selectedColor;			
+				//params['_color'] = areaColor.selectedColor;	
 				return params;
 			}
 			
@@ -217,12 +140,11 @@
 			public function initView():void{
 				forceImports();
 				_MainService = _webApplication.getService(_serviceName);
-				_Data.exceptions = ["_idEquipo", "_idCliente"];
+				_Data.exceptions = ["_idRefaccion"];
 				_MainService.addEventListener(FaultEvent.FAULT,onFault);
 				initData();
 				addValidations();
-				
-				_searchType.selectedIndex = 1;
+				//_searchType.selectedIndex = 1;
 			}
 			
 			public function imageUploadReady(data:Object):void{
@@ -233,8 +155,9 @@
 			
 			
 			private function initData():void{
-				_MainService.getFields();
-				_MainService.getFields.addEventListener(ResultEvent.RESULT,onGetFieldsResult);
+				//_MainService.getFields();
+				//_MainService.getFields.addEventListener(ResultEvent.RESULT,onGetFieldsResult);
+				getData();
 				_dataReady = false;
 			}
 			
@@ -296,6 +219,25 @@
 				}
 			}
 			
+			private function recordSpare():void{
+				if(Valid.validateAll()){
+					if(_refaccion.selectedItem != null && _refaccion.selectedItem != undefined && _refaccion.selectedItem._idRefaccion != -1){
+						_MainService.recordSpare({_idDiagnostico:_idDiagnostico,_idRefaccion:_refaccion.selectedItem._idRefaccion});
+						_MainService.recordSpare.addEventListener(ResultEvent.RESULT,onRecordSpareComplete);
+						_dataReady = false;	
+					}
+				}else{
+					Alert.show(Valid.errors,"Error");
+				}
+			}
+			
+			private function deleteSpare():void{
+				if(_dataList.selectedIndex != -1){
+					_MainService.deleteSpareRecord({_idRefaccion:_dataList.selectedItem._idRefaccion,_idDiagnostico:_idDiagnostico});
+					_MainService.deleteSpareRecord.addEventListener(ResultEvent.RESULT,onDeleteSpareComplete);	
+				}
+			}
+			
 			private function cancel():void{
 				onDataSelect();
 				resetBooleans();
@@ -338,28 +280,29 @@
 			}
 			
 			private function getData():void{
-					_MainService.getRecordById(_idCliente);
-					_MainService.getRecordById.addEventListener(ResultEvent.RESULT,onGetDataResult);
+				_MainService.getRecords(_idEquipo);
+				_MainService.getSpareDiagnostic(_idDiagnostico);
+				_MainService.getRecords.addEventListener(ResultEvent.RESULT,onGetDataResult);
+				_MainService.getSpareDiagnostic.addEventListener(ResultEvent.RESULT,onGetSpareDiagnosticResult);
 			}
 			
 			private function onGetDataResult(e:ResultEvent):void{
-				_MainService.getRecordById.removeEventListener(ResultEvent.RESULT,onGetDataResult);
-				
-				_DataResult = Converter.arrayConverter(e.result);
-				if(_DataResult.length==0) {
-					Alert.show("No hay registros en la base de datos","Atención")
-				}else{
-					if(_dataIndex<0) _dataIndex = 0;
-					_Data.loadData(_DataResult[_dataIndex]);
-					_dataList.selectedIndex = _dataIndex;
-					_dataList.setSelectedIndex(_dataList.selectedIndex);
-					_dataList.setSelectedIndex(_dataList.selectedIndex);
-					loadExtraFields(_DataResult[_dataIndex]);
-				}
+				_MainService.getRecords.removeEventListener(ResultEvent.RESULT,onGetDataResult);
+				_refacciones = Converter.arrayConverter(e.result);
 				_dataReady = true;
 				resetBooleans();
 			}
 			
+			private function onGetSpareDiagnosticResult(e:ResultEvent):void{
+				_MainService.getSpareDiagnostic.removeEventListener(ResultEvent.RESULT,onGetSpareDiagnosticResult);
+				_refaccionesAsignadas = Converter.arrayConverter(e.result);
+			}
+			
+			private function onRecordSpareComplete(e:ResultEvent):void{
+				_MainService.recordSpare.removeEventListener(ResultEvent.RESULT,onRecordSpareComplete);
+				getData();
+			}
+						
 			private function onFault(e:FaultEvent):void{
 				Alert.show(e.fault.faultString,"Error");
 			}
@@ -376,23 +319,28 @@
 			private function onCreateComplete(e:ResultEvent):void{				
 				_MainService.createRecord.removeEventListener(ResultEvent.RESULT,onCreateComplete);
 				_dataIndex = _DataResult.length;
-				Catalogs.reloadSpecificTables(["equipos"]);
+				Catalogs.reloadSpecificTables(["refacciones"]);
 				getData();
 			}
 			
 			private function onUpdateComplete(e:ResultEvent):void{
 				_MainService.updateRecord.removeEventListener(ResultEvent.RESULT,onUpdateComplete);
-				Catalogs.reloadSpecificTables(["equipos"]);
+				Catalogs.reloadSpecificTables(["refacciones"]);
 				getData();
 			}
 			
 			private function onDeleteComplete(e:ResultEvent):void{
 				_MainService.deleteRecord.removeEventListener(ResultEvent.RESULT,onDeleteComplete);
 				_dataIndex = _DataResult.length-2;
-				Catalogs.reloadSpecificTables(["equipos"]);
+				Catalogs.reloadSpecificTables(["refacciones"]);
 				getData();
 			}
 			
+			private function onDeleteSpareComplete(e:ResultEvent):void{
+				_MainService.deleteSpareRecord.removeEventListener(ResultEvent.RESULT,onDeleteSpareComplete);
+				getData();
+			}
+
 			//-------------------------------- ResultsEvents --------------------------------------	
 			
 			//-------------------------------- POP UP WINDOW --------------------------------------	
@@ -412,7 +360,7 @@
 			//-------------------------------- POP UP WINDOW --------------------------------------
 			
 			//-------------------------------- Search Engine --------------------------------------
-			
+			/*
 			private function searchFilter():void{
 				_DataResult.filterFunction = vlidateSearch;
 				_DataResult.refresh();
@@ -430,13 +378,29 @@
 				_searchFilter = _searchField.text;
 				searchFilter();
 			}
+			*/
 			private var _searchFilter:String 			= new String();
-			[Bindable]	private var _searchTypes:ArrayCollection 	= new ArrayCollection([{label:"Nombre",     	value:"_nombreEquipo"},{label:"Modelo",     	value:"_modelo"},
-																						   {label:"No. Serie",     	value:"_serie"},{label:"Año Fabricacion",     	value:"_anioFabricacion"}]);
+			[Bindable]	private var _searchTypes:ArrayCollection 	= new ArrayCollection([{label:"Nombre", value:"_nombre"}]);
 			
 			//-------------------------------- Search Engine --------------------------------------					
 			
 		]]>
 	</fx:Script>
+	<s:DataGrid id="_dataList" x="94" y="42" width="503" height="130"
+				contentBackgroundColor="#D5E7FE" dataProvider="{_refaccionesAsignadas}"
+				requestedRowCount="4">
+		<s:columns>
+			<s:ArrayList>
+				<s:GridColumn dataField="_nombre" headerText="Falla"></s:GridColumn>
+			</s:ArrayList>
+		</s:columns>
+	</s:DataGrid>
+	<s:Label x="10" y="49" text="Refacciones :"/>
+	<s:Button visible="{!_newData}" x="472" y="10" width="125" height="24" label="Agregar Refacción"
+			  click="recordSpare();" enabled="{_dataReady&amp;&amp;!_newData}"/>
+	<s:Button x="483" y="180" width="114" height="24" label="Borrar Refaccion" click="deleteSpare();"/>
+	<s:ComboBox id="_refaccion" x="94" y="11" width="370" change="dataChange();"
+				contentBackgroundColor="#D5E7FE" dataProvider="{_refacciones}"
+				labelField="_nombre"></s:ComboBox>
 	
 </s:TitleWindow>
