--- a/src/trunk/GRAPHO_SYSTEMS/src/views/ods/Prediagnostico.mxml
+++ b/src/trunk/GRAPHO_SYSTEMS/src/views/ods/Prediagnostico.mxml
@@ -8,12 +8,11 @@
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	<s:ComboBox id="_idTecnico" x="91" y="490" width="310" change="dataChange();"
-				dataProvider="{SystemGlobals.EMPLEADOS}" fontStyle="italic" labelField="_nombre"
+				dataProvider="{SystemGlobals.EMPLEADOS}" fontStyle="italic" labelFunction="concatenateName"
 				selectedIndex="{_datosPrediagnostico._idTecnico}"> </s:ComboBox>
 	<s:ComboBox id="_tiempoUnidad" x="855" y="175" width="93" change="dataPreDiagnosticChange();"
-				dataProvider="{ConstantData.TiempoEstimado}" fontStyle="italic"> </s:ComboBox>
-	<s:ComboBox id="_idRefaccion" x="814" y="138" width="404" change="dataPreDiagnosticChange();"
-				dataProvider="{_refacciones}" fontStyle="italic" labelField="_nombre"> </s:ComboBox>
+				dataProvider="{ConstantData.TiempoEstimado}" enabled="{_fallaSelected}"
+				fontStyle="italic"> </s:ComboBox>
 	<s:ComboBox id="_prediagnosticoUnidadTiempo" x="130" y="562" width="93" change="dataChange();"
 				dataProvider="{ConstantData.TiempoEstimado}" fontStyle="italic"
 				selectedIndex="{_datosPrediagnostico._prediagnosticoUnidadTiempo}"> </s:ComboBox>
@@ -30,23 +29,26 @@
 	<s:Label x="91" y="552" color="#767474" fontSize="10" fontStyle="italic" text="tiempo"/>
 	<s:Label x="36" y="496" text="Técnico :"/>
 	<s:TextInput id="_descripcionFalla" x="816" y="64" width="402"
-				 change="dataPreDiagnosticChange();" fontStyle="normal"/>
-	<s:TextInput id="_descripcionFallaReportada" x="816" y="23" width="314" contentBackgroundColor="#e7e7e7"
-				 fontStyle="normal"/>
+				 change="dataPreDiagnosticChange();" enabled="{_fallaSelected}" fontStyle="normal"/>
+	<s:TextInput id="_descripcionFallaReportada" x="816" y="23" width="314"
+				 contentBackgroundColor="#e7e7e7" enabled="false" fontStyle="normal"/>
+	<s:TextInput id="_refaccionesSeleccionadas" x="816" y="138" width="366"
+				 contentBackgroundColor="#e7e7e7" enabled="false" fontStyle="normal"/>
 	<s:TextInput id="_codigoFalla" x="1138" y="23" width="79" contentBackgroundColor="#E7E7E7"
-				 fontStyle="normal"/>
+				 enabled="false" fontStyle="normal"/>
 	<s:Label x="777" y="30" text="Falla :"/>
 	<s:Label x="816" y="12" color="#767474" fontSize="10" fontStyle="italic" text="reportada"/>
 	<s:Label x="1138" y="12" color="#767474" fontSize="10" fontStyle="italic" text="código"/>
 	<s:TextInput id="_habloCon" x="91" y="524" width="310" change="dataChange();" fontStyle="normal"
 				 text="{_datosPrediagnostico._habloCon}"/>
-	<s:Label x="25" y="531" text="Hablo con :"/>
+	<s:Label x="25" y="531" text="Habló con :"/>
 	<s:TextInput id="_descripcionSolucion" x="816" y="100" width="402"
-				 change="dataPreDiagnosticChange();" fontStyle="normal"/>
+				 change="dataPreDiagnosticChange();" enabled="{_fallaSelected}" fontStyle="normal"/>
 	<s:TextInput id="_tiempoNumero" x="816" y="176" width="31" change="dataPreDiagnosticChange();"
-				 fontStyle="normal" textAlign="center"/>
+				 enabled="{_fallaSelected}" fontStyle="normal" textAlign="center"/>
 	<s:TextInput id="_porcentajeDificultad" x="956" y="176" width="60"
-				 change="dataPreDiagnosticChange();" fontStyle="normal" textAlign="center"/>
+				 change="dataPreDiagnosticChange();" enabled="{_fallaSelected}" fontStyle="normal"
+				 textAlign="center"/>
 	<s:Label x="956" y="165" color="#767474" fontSize="10" fontStyle="italic" text="porcentaje"/>
 	<s:Label x="747" y="183" text="Estimados :"/>
 	<s:Label x="1020" y="185" text="%"/>
@@ -70,12 +72,12 @@
 	
 	
 	<s:DataGrid id="_listaPrediagnostico" x="816" y="212" width="402" height="373"
-				dataProvider="{_prediagnosticos}" enabled="{_dataReady&amp;&amp;!_newData}"
+				dataProvider="{_prediagnosticos}" enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;_fallaSelected&amp;&amp;!_updateData}"
 				requestedRowCount="4" selectionChange="onDataPreDiagnosticSelect();">
 		<s:columns>
 			<s:ArrayList>
 				<s:GridColumn dataField="falla" headerText="Pre-Diagnóstico"
-							  itemRenderer="renderers.Seguimiento_ItemRenderer2"></s:GridColumn>
+							  itemRenderer="renderers.Seguimiento_ItemRenderer3"></s:GridColumn>
 			</s:ArrayList>
 		</s:columns>	
 		
@@ -83,10 +85,10 @@
 	<s:Label x="737" y="219" text="Diagnóstico : " textAlign="left"/>
 	<s:TextArea id="_nota" x="92" y="251" width="625" height="78" contentBackgroundColor="#e7e7e7"
 				enabled="false"/>
-	<s:Button label="Nuevo" width="80" enabled="{_dataReady}" visible="{!_newData&amp;&amp;!_updateData}" click="newPreDiagnosticData();" y="168" x="1050"/>
+	<s:Button label="Nuevo" width="80" enabled="{_dataReady&amp;&amp;_fallaSelected}" visible="{!_newData&amp;&amp;!_updateData}" click="newPreDiagnosticData();" y="168" x="1050"/>
 	<s:Button label="Cancelar" width="80" enabled="{_dataReady}" visible="{_newData||_updateData}" click="cancelPrediagnostic();" y="168" x="1138"/>
 	<s:Button label="Aceptar" width="80" enabled="{_dataReady}" visible="{_newData}" click="createPreDiagnosticData();" y="168" x="1050"/>
-	<s:Button label="Eliminar" width="80" enabled="{_dataReady&amp;&amp;!_newData}" visible="{!_newData&amp;&amp;!_updateData}" click="deleteDataAlert();" y="168" x="1138"/>
+	<s:Button label="Eliminar" width="80" enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;_fallaSelected}" visible="{!_newData&amp;&amp;!_updateData}" click="deleteDataAlert();" y="168" x="1138"/>
 	<s:Button label="Actualizar" width="80" enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;_updateData}" visible="{_updateData&amp;&amp;!_newData}" click="updateDiagnosticData();" y="168" x="1050"/>
 	<s:Button label="Regresar" click="closeWindow();" width="145"  enabled="{!_newData}" y="602" x="1073"/>
 	<s:Button x="565" y="523" width="72" height="23" label="Ahora" click="getCurrentTime();"
@@ -132,8 +134,8 @@
 	<s:TextInput id="_operador" x="91" y="172" width="310" contentBackgroundColor="#e7e7e7"
 				 enabled="false" fontStyle="italic"/>
 	<s:Label x="27" y="178" text="Operador :"/>
-	<s:Label x="91" y="128" color="#767474" fontSize="10" fontStyle="italic" text="reporto"/>
-	<s:Label x="409" y="128" color="#767474" fontSize="10" fontStyle="italic" text="atendio"/>
+	<s:Label x="91" y="128" color="#767474" fontSize="10" fontStyle="italic" text="reportó"/>
+	<s:Label x="409" y="128" color="#767474" fontSize="10" fontStyle="italic" text="atendió"/>
 	<s:TextInput id="_nombreEmpleado" x="409" y="139" width="308" contentBackgroundColor="#e7e7e7"
 				 enabled="false" fontStyle="italic"/>
 	<s:TextInput id="_serie" x="567" y="212" width="70" contentBackgroundColor="#e7e7e7"
@@ -158,7 +160,7 @@
 				 enabled="false" fontWeight="bold" textAlign="center"/>
 	<s:DataGrid id="_listaFallas" x="92" y="344" width="625" contentBackgroundColor="#E7E7E7"
 				dataProvider="{_fallasReportadas}" editable="false" requestedRowCount="4"
-				selectionChange="onFallaSelect();">
+				selectionChange="onFallaSelect();" enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;_fallaSelected&amp;&amp;!_updateData}">
 		<s:columns>
 			<s:ArrayList>
 				<s:GridColumn width="80" dataField="_codigo" headerText="Código"></s:GridColumn>
@@ -166,8 +168,13 @@
 			</s:ArrayList>
 		</s:columns>
 	</s:DataGrid>
-	<s:Button label="Actualizar" width="80" enabled="{_dataOrdenReady&amp;&amp;!_newOrdenData&amp;&amp;_updateOrdenData}" visible="{_updateOrdenData&amp;&amp;!_newOrdenData}" click="updateData();" y="604" x="91"/>
-	<s:Button label="Cancelar" width="80" enabled="{_dataOrdenReady}" visible="{_newOrdenData||_updateOrdenData}" click="cancel();" y="604" x="179"/>
+	<s:Button label="Actualizar" width="80" enabled="{_updateOrdenData&amp;&amp;!_newOrdenData}" visible="true" click="updateData();" y="604" x="91"/>
+	<s:Button label="Cancelar" width="80" enabled="{_newOrdenData||_updateOrdenData}" visible="true" click="cancel();" y="604" x="179"/>
+	<s:Button x="1190" y="138" width="28" height="23"
+			  click="openPopUp(&quot;ods.Falla_Refacciones&quot;);"
+			  enabled="{!_newData&amp;&amp;!_updateData}"
+			  icon="@Embed(source='../../assets/Icons/Buttons/Edit.png')"
+			  skinClass="spark.skins.spark.ButtonSkin"/>
 	
 	<fx:Script>
 		<![CDATA[
@@ -188,6 +195,7 @@
 			import mx.rpc.events.FaultEvent;
 			import mx.rpc.events.ResultEvent;
 			import mx.rpc.remoting.RemoteObject;
+			import mx.utils.StringUtil;
 			
 			private var _webApplication:WebApplication;
 			private var Valid:Validator 			= new Validator();
@@ -205,6 +213,7 @@
 			[Bindable]	public var _dataReady:Boolean 			= false;
 			[Bindable]	public var _newData:Boolean 			= false;
 			[Bindable]	public var _updateData:Boolean 			= false;
+			[Bindable]	public var _fallaSelected:Boolean 		= false;
 			
 			[Bindable]	public var _newOrdenData				= false;
 			[Bindable]	public var _dataOrdenReady				= false;
@@ -224,7 +233,6 @@
 			[Bindable] private var _equipo:Object = {};
 			[Bindable] private var _datosPrediagnostico:Object = {};
 			[Bindable] private var _fallasReportadas:ArrayCollection = new ArrayCollection();
-			[Bindable] private var _refacciones:ArrayCollection = new ArrayCollection();
 			[Bindable] private var _prediagnosticos:ArrayCollection = new ArrayCollection();
 			//-----------Local Vars -----------
 			
@@ -260,7 +268,9 @@
 			
 			private function get viewContext():Object{
 				return {webApplication: _webApplication,
-					workManager: this
+					workManager: this,
+					idEquipo:_equipo._idEquipo,
+					idDiagnostico:_listaPrediagnostico.selectedItem._idDiagnostico			
 				}					
 			}
 			
@@ -300,16 +310,44 @@
 				
 			}
 			
+			private function concatenateName(value:Object):String
+			{
+				var nombre:String = "";
+				if(value._nombre != null && value._nombre != undefined){
+					nombre += StringUtil.trim(value._nombre) + " ";
+				}
+				if(value._paterno != null && value._paterno != undefined){
+					nombre += StringUtil.trim(value._paterno) + " ";
+				}
+				if(value._materno != null && value._materno != undefined){
+					nombre += StringUtil.trim(value._materno) + " ";
+				}
+				return nombre;
+			}
+			
 			public function initView():void{
 				forceImports();
 				_MainService = _webApplication.getService(_serviceName);
 				_Data.exceptions = ["_creado","_modificado","_creadoPor","_creado",	"_modificado","_creadoPor",
 					"_modificadoPor","_descripcionClienteFalla","_idCodigoError","_idCliente","_idContacto",
 					"_idTipoServicio","_idAreaSoporteTecnico","_idEstatus","_idEmpleado","_idCliente","_idContacto",
-					"_idEquipo","_fechaHabloCon","_idEquipo","_nombreTecnico","_idRefaccion"
+					"_idEquipo","_fechaHabloCon","_idEquipo","_nombreTecnico","_idRefaccion","_diasReparacion",
+					"_importe","_totalRemisionar","_noRemision","_responsableAsignacionDeFecha",
+					"_domicilioServicio","_fechaServicioInicial","_formaPago","_fechaPagoInicial",
+					"_tecnicoAsignado","_seInformoVisitaA","_fechaPromesaVisita","_tiempoUnidadDiagnostico","_tiempoNumeroDiagnostico",
+					"_diasReparacion","_horaServInicial","_nombreTecnicoAsignado","_totalFacturar","_noFactura","_fechaServInicial",
+					"_cantidadInicial","_responsableCotizacion","_idTecnicoAsignado","_idTecnicoDiagnostico",
+					"_tipoCambio","_fechaCotizacion","_fechaPreCotizacion","_cantidadInicial","_responsableCotizacion","_responsablePreCotizacion",
+					"_tipoTransporte","_costoManoObra","_costoRefaccion","_costoTransporte","_costoHotel","_costoComidas","_costoFleteSobreEquipaje",
+					"_costoGastosDiversos","_observacionesCotDiag","_cantidadComplemento","_importePagoInicial","_fechaPrePagoInicial",
+					"_preImporte",
+					"_tieneServicio","_tienePrediagnostico","_tieneCotizacionPrediagnostico","_tieneVentaPrediagnostico","_tieneConfirmacion",
+					"_tieneDiagnostico","_tieneCotizacionDiagnostico","_tieneVentaDiagnostico",
+					"_fechaDepositoVta","_importeDepositoVta","_formaPagoVta","_observacionesComplVta","_observacionesFacVta"
 				];
 				_DataDiagnostico.exceptions = ["_idDiagnostico","_esPrediagnostico","_falla","_nombreRefaccion","_nombreTecnico","_costoManoObra",
-					"_costoTransporte","_costoHotel","_costoComidas","_costoFleteSobreEquipaje","_costoGastosDiversos","_costoRefaccion","_tipoTransporte"];
+					"_costoTransporte","_costoHotel","_costoComidas","_costoFleteSobreEquipaje","_costoGastosDiversos","_costoRefaccion",
+					"_tipoTransporte","_descripcionAccion","_fechaCreacion","_descripcionFallaReal"];
 				_MainService.addEventListener(FaultEvent.FAULT,onFault);
 				initData();
 				addValidations();
@@ -342,6 +380,7 @@
 			
 			private function newPreDiagnosticData():void{
 				_DataDiagnostico.clear();
+				_refaccionesSeleccionadas.text = "";
 				_newData = true;
 				_updateData = false;
 				Valid.validateAll();
@@ -436,11 +475,20 @@
 			
 			private function onFallaSelect():void{
 				if(_listaFallas.selectedIndex!=-1) {
-					_descripcionFallaReportada.text = _listaFallas.selectedItem._falla;
-					_codigoFalla.text = _listaFallas.selectedItem._codigo;
-					_MainService.getPreDiagnosticRecords(_listaFallas.selectedItem._idOrdenFalla);
-					_MainService.getPreDiagnosticRecords.addEventListener(ResultEvent.RESULT,onGetPreDiagnosticRecordsResult);
+				}else{
+					if(_fallasReportadas.length > 0){
+						_listaFallas.selectedIndex = 0;
+					}else{
+						return;
+					}
+						
 				}
+				_listaFallas.setSelectedIndex(_listaFallas.selectedIndex);
+				_descripcionFallaReportada.text = _listaFallas.selectedItem._falla;
+				_codigoFalla.text = _listaFallas.selectedItem._codigo;
+				_MainService.getPreDiagnosticRecords(_listaFallas.selectedItem._idOrdenFalla);
+				_MainService.getPreDiagnosticRecords.addEventListener(ResultEvent.RESULT,onGetPreDiagnosticRecordsResult);
+				_fallaSelected = true;
 			}
 			
 			private function getCurrentTime():void{
@@ -479,6 +527,7 @@
 				if(e){
 					if(e.result) {
 						_DataDiagnostico.createFields(Converter.arrayConverter(e.result));
+						getPrediagnosticData();
 					}
 				}else{
 					Alert.show("Error al cargar los datos","Error");
@@ -493,15 +542,19 @@
 				if(_prediagnosticos.length > 0){
 					if(_dataIndex<0) _dataIndex = 0;
 					_DataDiagnostico.loadData(_prediagnosticos[_dataIndex]);
-					_listaPrediagnostico.selectedIndex = _dataIndex;	
+					_listaPrediagnostico.selectedIndex = _dataIndex;
+					getSpares();
+				}else{
+					_DataDiagnostico.clear();
 				}
 				_dataReady = true;
 			}
 			
-			private function getDiagnosticData():void{
-				_MainService.getSpareParts(_equipo._idEquipo);
-				_MainService.getSpareParts.addEventListener(ResultEvent.RESULT,onGetSparePartsResult);
-				onFallaSelect(); //Para recargar los diagnosticos asignados a la falla actual
+			private function getPrediagnosticData():void{
+				_MainService.getFailuresFromOrder(_idOrdenSelected);
+				_MainService.getPrediagnosticData(_idOrdenSelected);
+				_MainService.getFailuresFromOrder.addEventListener(ResultEvent.RESULT,onGetFailuresOrderResult);
+				_MainService.getPrediagnosticData.addEventListener(ResultEvent.RESULT,onGetPrediagnosticResult);
 				resetPreDiagnosticBooleans();
 			}
 			
@@ -509,13 +562,9 @@
 				_MainService.getClientFromOrder(_idOrdenSelected);
 				_MainService.getSpecificOrder(_idOrdenSelected);
 				_MainService.getEquipmentFromOrder(_idOrdenSelected);
-				_MainService.getFailuresFromOrder(_idOrdenSelected);
-				_MainService.getPrediagnosticData(_idOrdenSelected);
 				_MainService.getSpecificOrder.addEventListener(ResultEvent.RESULT,onGetOrderResult);
 				_MainService.getClientFromOrder.addEventListener(ResultEvent.RESULT,onGetDataClientResult);
 				_MainService.getEquipmentFromOrder.addEventListener(ResultEvent.RESULT,onGetDataSystemResult);
-				_MainService.getFailuresFromOrder.addEventListener(ResultEvent.RESULT,onGetFailuresOrderResult);
-				_MainService.getPrediagnosticData.addEventListener(ResultEvent.RESULT,onGetPrediagnosticResult);
 				resetBooleans();
 			}
 			
@@ -529,6 +578,28 @@
 					_dataIndex =_listaPrediagnostico.selectedIndex;
 					loadExtraFields(_listaPrediagnostico.selectedItem);
 					_selectedId = _listaPrediagnostico.selectedItem["_idDiagnostico"];
+					getSpares();
+				}
+			}
+			
+			private function getSpares():void{
+				if(_listaPrediagnostico.selectedIndex != -1){
+					_MainService.getSparesFromDiagnostic(_listaPrediagnostico.selectedItem._idDiagnostico);
+					_MainService.getSparesFromDiagnostic.addEventListener(ResultEvent.RESULT,onGetSparesResult);	
+				}
+			}
+			
+			private function onGetSparesResult(e:ResultEvent):void{
+				_MainService.getSparesFromDiagnostic.removeEventListener(ResultEvent.RESULT,onGetSparesResult);
+				var resArr:ArrayCollection;
+				resArr = Converter.arrayConverter(e.result);
+				var arrString:Array = new Array();
+				_refaccionesSeleccionadas.text = "";
+				if(resArr.length > 0){
+					for(var i = 0; i < resArr.length; i++){
+						arrString.push(resArr[i]._nombre);
+					}					
+					_refaccionesSeleccionadas.text = arrString.join(", ");
 				}
 			}
 			
@@ -547,7 +618,7 @@
 			
 			private function onUpdateDiagnosticComplete(e:ResultEvent):void{
 				_MainService.updateDiagnosticRecord.removeEventListener(ResultEvent.RESULT,onUpdateDiagnosticComplete);
-				getDiagnosticData();
+				getPrediagnosticData();
 			}
 			
 			private function onDeleteDiagnosticComplete(e:ResultEvent):void{
@@ -568,12 +639,6 @@
 				_dataOrdenReady = true;				
 			}
 
-			private function onGetSparePartsResult(e:ResultEvent):void{
-				_MainService.getSpareParts.removeEventListener(ResultEvent.RESULT,onGetSparePartsResult);
-				_refacciones = Converter.arrayConverter(e.result);
-				_dataReady = true;				
-			}
-			
 			public function onGetPrediagnosticResult(e:ResultEvent):void{
 				_MainService.getPrediagnosticData.removeEventListener(ResultEvent.RESULT,onGetPrediagnosticResult);
 				var resArr:ArrayCollection;
@@ -588,6 +653,7 @@
 			public function onGetFailuresOrderResult(e:ResultEvent):void{
 				_MainService.getFailuresFromOrder.removeEventListener(ResultEvent.RESULT,onGetFailuresOrderResult);
 				_fallasReportadas = Converter.arrayConverter(e.result);
+				onFallaSelect();
 			}
 			
 			private function onGetDataSystemResult(e:ResultEvent):void{
@@ -599,7 +665,6 @@
 				}else{
 					_equipo = {};
 				}
-				getDiagnosticData(); //Ahora que tenemos el id del equipo, ahora si podemos invocar sus refacciones
 			}
 			//-------------------------------- POP UP WINDOW --------------------------------------	
 			public function openPopUp(popUpName:String,modal:Boolean = true):void{
@@ -626,6 +691,8 @@
 			
 			private function closePopup(e:CloseEvent):void{
 				PopUpManager.removePopUp(e.target as TitleWindow);
+				getSpares();
+				getPrediagnosticData();
 			}
 			//-------------------------------- POP UP WINDOW --------------------------------------
 			
